--- a/book/print.html
+++ b/book/print.html
@@ -97,7 +97,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="index.html"><strong aria-hidden="true">1.</strong> Mojang API Documentation</a></li><li class="chapter-item expanded "><a href="no-auth/index.html"><strong aria-hidden="true">2.</strong> No authentication</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="no-auth/sale-stats.html"><strong aria-hidden="true">2.1.</strong> Sale statistics</a></li><li class="chapter-item expanded "><a href="no-auth/blocked-servers.html"><strong aria-hidden="true">2.2.</strong> Blocked servers</a></li><li class="chapter-item expanded "><a href="no-auth/username-availability-accurate.html"><strong aria-hidden="true">2.3.</strong> Username availability (accurate)</a></li><li class="chapter-item expanded "><a href="no-auth/username-to-uuid-get.html"><strong aria-hidden="true">2.4.</strong> Username to UUID (GET)</a></li><li class="chapter-item expanded "><a href="no-auth/username-to-uuid-post.html"><strong aria-hidden="true">2.5.</strong> Username to UUID (POST)</a></li><li class="chapter-item expanded "><a href="no-auth/uuid-to-username.html"><strong aria-hidden="true">2.6.</strong> UUID to username</a></li><li class="chapter-item expanded "><a href="no-auth/uuid-to-profile.html"><strong aria-hidden="true">2.7.</strong> UUID to user profile (skins, capes, etc.)</a></li><li class="chapter-item expanded "><a href="no-auth/name-history.html"><strong aria-hidden="true">2.8.</strong> Find profile's username history</a></li></ol></li><li class="chapter-item expanded "><a href="authentication/index.html"><strong aria-hidden="true">3.</strong> Authenticating</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="authentication/bearers.html"><strong aria-hidden="true">3.1.</strong> A peek into Bearer tokens</a></li><li class="chapter-item expanded "><a href="authentication/msa.html"><strong aria-hidden="true">3.2.</strong> Authenticating a Microsoft account</a></li><li class="chapter-item expanded "><a href="authentication/mojang.html"><strong aria-hidden="true">3.3.</strong> Authenticating a Mojang account</a></li></ol></li><li class="chapter-item expanded "><a href="sq-flow/index.html"><strong aria-hidden="true">4.</strong> Security question-answer flow</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="sq-flow/list.html"><strong aria-hidden="true">4.1.</strong> List of security questions</a></li><li class="chapter-item expanded "><a href="sq-flow/check-if-sqs-needed.html"><strong aria-hidden="true">4.2.</strong> Check if security questions are needed</a></li><li class="chapter-item expanded "><a href="sq-flow/get-sqs.html"><strong aria-hidden="true">4.3.</strong> Get security questions</a></li><li class="chapter-item expanded "><a href="sq-flow/send-sq-answers.html"><strong aria-hidden="true">4.4.</strong> Send security answers</a></li></ol></li><li class="chapter-item expanded "><a href="needs-auth/index.html"><strong aria-hidden="true">5.</strong> Requires authentication</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="needs-auth/redeem-gc.html"><strong aria-hidden="true">5.1.</strong> Redeem a giftcode / voucher</a></li><li class="chapter-item expanded "><a href="needs-auth/username-availability-accurate.html"><strong aria-hidden="true">5.2.</strong> Username availability (accurate)</a></li><li class="chapter-item expanded "><a href="needs-auth/create-profile.html"><strong aria-hidden="true">5.3.</strong> Create a Minecraft profile</a></li><li class="chapter-item expanded "><a href="needs-auth/view-user.html"><strong aria-hidden="true">5.4.</strong> View user information</a></li><li class="chapter-item expanded "><a href="needs-auth/view-profile.html"><strong aria-hidden="true">5.5.</strong> View your profile information</a></li><li class="chapter-item expanded "><a href="needs-auth/view-profile-old-get.html"><strong aria-hidden="true">5.6.</strong> View your profile information (old) - GET</a></li><li class="chapter-item expanded "><a href="needs-auth/view-profile-old-post.html"><strong aria-hidden="true">5.7.</strong> View your profile information (old) - POST</a></li><li class="chapter-item expanded "><a href="needs-auth/name-change-eligibility.html"><strong aria-hidden="true">5.8.</strong> Name change eligibility</a></li><li class="chapter-item expanded "><a href="needs-auth/change-name.html"><strong aria-hidden="true">5.9.</strong> Change your account's username</a></li><li class="chapter-item expanded "><a href="needs-auth/check-skin.html"><strong aria-hidden="true">5.10.</strong> Check your account's skin (old)</a></li><li class="chapter-item expanded "><a href="needs-auth/change-skin.html"><strong aria-hidden="true">5.11.</strong> Change your account's skin</a></li><li class="chapter-item expanded "><a href="needs-auth/reset-skin.html"><strong aria-hidden="true">5.12.</strong> Reset your skin</a></li><li class="chapter-item expanded "><a href="needs-auth/check-capes.html"><strong aria-hidden="true">5.13.</strong> Check your account's capes (old)</a></li><li class="chapter-item expanded "><a href="needs-auth/change-cape.html"><strong aria-hidden="true">5.14.</strong> Change your enabled cape</a></li><li class="chapter-item expanded "><a href="needs-auth/disable-cape.html"><strong aria-hidden="true">5.15.</strong> Disable your cape</a></li><li class="chapter-item expanded "><a href="needs-auth/credit-cards.html"><strong aria-hidden="true">5.16.</strong> View credit card information</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="index.html"><strong aria-hidden="true">1.</strong> Mojang API Documentation</a></li><li class="chapter-item expanded "><a href="no-auth/index.html"><strong aria-hidden="true">2.</strong> No authentication</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="no-auth/sale-stats.html"><strong aria-hidden="true">2.1.</strong> Sale statistics</a></li><li class="chapter-item expanded "><a href="no-auth/blocked-servers.html"><strong aria-hidden="true">2.2.</strong> Blocked servers</a></li><li class="chapter-item expanded "><a href="no-auth/username-availability-accurate.html"><strong aria-hidden="true">2.3.</strong> Username availability (accurate)</a></li><li class="chapter-item expanded "><a href="no-auth/username-to-uuid-get.html"><strong aria-hidden="true">2.4.</strong> Username to UUID (GET)</a></li><li class="chapter-item expanded "><a href="no-auth/username-to-uuid-post.html"><strong aria-hidden="true">2.5.</strong> Username to UUID (POST)</a></li><li class="chapter-item expanded "><a href="no-auth/uuid-to-username.html"><strong aria-hidden="true">2.6.</strong> UUID to username</a></li><li class="chapter-item expanded "><a href="no-auth/uuid-to-profile.html"><strong aria-hidden="true">2.7.</strong> UUID to user profile (skins, capes, etc.)</a></li><li class="chapter-item expanded "><a href="no-auth/name-history.html"><strong aria-hidden="true">2.8.</strong> Find profile's username history</a></li></ol></li><li class="chapter-item expanded "><a href="authentication/index.html"><strong aria-hidden="true">3.</strong> Authenticating</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="authentication/bearers.html"><strong aria-hidden="true">3.1.</strong> A peek into Bearer tokens</a></li><li class="chapter-item expanded "><a href="authentication/msa.html"><strong aria-hidden="true">3.2.</strong> Authenticating a Microsoft account</a></li><li class="chapter-item expanded "><a href="authentication/mojang.html"><strong aria-hidden="true">3.3.</strong> Authenticating a Mojang account</a></li></ol></li><li class="chapter-item expanded "><a href="sq-flow/index.html"><strong aria-hidden="true">4.</strong> Security question-answer flow</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="sq-flow/list.html"><strong aria-hidden="true">4.1.</strong> List of security questions</a></li><li class="chapter-item expanded "><a href="sq-flow/check-if-sqs-needed.html"><strong aria-hidden="true">4.2.</strong> Check if security questions are needed</a></li><li class="chapter-item expanded "><a href="sq-flow/get-sqs.html"><strong aria-hidden="true">4.3.</strong> Get security questions</a></li><li class="chapter-item expanded "><a href="sq-flow/send-sq-answers.html"><strong aria-hidden="true">4.4.</strong> Send security answers</a></li></ol></li><li class="chapter-item expanded "><a href="needs-auth/index.html"><strong aria-hidden="true">5.</strong> Requires authentication</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="needs-auth/redeem-gc.html"><strong aria-hidden="true">5.1.</strong> Redeem a giftcode / voucher</a></li><li class="chapter-item expanded "><a href="needs-auth/username-availability-accurate.html"><strong aria-hidden="true">5.2.</strong> Username availability (accurate)</a></li><li class="chapter-item expanded "><a href="needs-auth/create-profile.html"><strong aria-hidden="true">5.3.</strong> Create a Minecraft profile</a></li><li class="chapter-item expanded "><a href="needs-auth/view-user.html"><strong aria-hidden="true">5.4.</strong> View user information</a></li><li class="chapter-item expanded "><a href="needs-auth/view-profile.html"><strong aria-hidden="true">5.5.</strong> View your profile information</a></li><li class="chapter-item expanded "><a href="needs-auth/view-profile-old-get.html"><strong aria-hidden="true">5.6.</strong> View your profile information (old) - GET</a></li><li class="chapter-item expanded "><a href="needs-auth/view-profile-old-post.html"><strong aria-hidden="true">5.7.</strong> View your profile information (old) - POST</a></li><li class="chapter-item expanded "><a href="needs-auth/name-change-eligibility.html"><strong aria-hidden="true">5.8.</strong> Name change eligibility</a></li><li class="chapter-item expanded "><a href="needs-auth/change-name.html"><strong aria-hidden="true">5.9.</strong> Change your account's username</a></li><li class="chapter-item expanded "><a href="needs-auth/check-skin.html"><strong aria-hidden="true">5.10.</strong> Check your account's skin (old)</a></li><li class="chapter-item expanded "><a href="needs-auth/change-skin.html"><strong aria-hidden="true">5.11.</strong> Change your account's skin</a></li><li class="chapter-item expanded "><a href="needs-auth/reset-skin.html"><strong aria-hidden="true">5.12.</strong> Reset your skin</a></li><li class="chapter-item expanded "><a href="needs-auth/check-capes.html"><strong aria-hidden="true">5.13.</strong> Check your account's capes (old)</a></li><li class="chapter-item expanded "><a href="needs-auth/change-cape.html"><strong aria-hidden="true">5.14.</strong> Change your enabled cape</a></li><li class="chapter-item expanded "><a href="needs-auth/disable-cape.html"><strong aria-hidden="true">5.15.</strong> Disable your cape</a></li><li class="chapter-item expanded "><a href="needs-auth/credit-cards.html"><strong aria-hidden="true">5.16.</strong> View credit card information</a></li><li class="chapter-item expanded "><a href="needs-auth/change-password.html"><strong aria-hidden="true">5.17.</strong> Change user password</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -175,10 +175,12 @@
 <li>HX7</li>
 <li>Dusks</li>
 <li>tanpug</li>
+<li>courtier</li>
 </ul>
 <p>If I missed your credit, reach out. I want to give credit where credit is due.</p>
 <p>Thanks to Luke especially for forking over the cash to purchase new copies of Minecraft for testing purposes.</p>
 <p>This documentation is open-source at <a href="https://github.com/88/mojang-api-docs">88/mojang-api-docs</a>, so feel free to contribute and add more endpoints / information that you find.</p>
+<p>Best wishes &amp; warmest regards!</p>
 <h1><a class="header" href="#no-authentication" id="no-authentication">No authentication</a></h1>
 <p>The following sections of the API documentation are for any endpoint that does not require any authentication.</p>
 <ul>
@@ -1156,6 +1158,20 @@ TAKEN
   &quot;developerMessage&quot; : &quot;Unauthorized&quot;
 }
 </code></pre>
+<p><strong>500: Internal Server Error</strong></p>
+<p>If this status code is returned, the API is most likely being overloaded.</p>
+<pre><code class="language-json">{
+  &quot;path&quot; : &quot;/minecraft/profile&quot;,
+  &quot;errorType&quot; : &quot;Connect Error: Acquire operation took longer then configured maximum time&quot;,
+  &quot;error&quot; : &quot;Connect Error: Acquire operation took longer then configured maximum time&quot;
+}
+
+{
+  &quot;path&quot; : &quot;/minecraft/profile&quot;,
+  &quot;errorType&quot; : &quot;Connect Error: Too many outstanding acquire operations&quot;,
+  &quot;error&quot; : &quot;Connect Error: Too many outstanding acquire operations&quot;
+}
+</code></pre>
 <h1><a class="header" href="#view-user-information" id="view-user-information">View user information</a></h1>
 <p>This endpoint allows an authenticated user to view their user information (birthday, <code>userId</code> value, email, if it has security questions, etc).</p>
 <h3><a class="header" href="#request-15" id="request-15">Request</a></h3>
@@ -1823,6 +1839,50 @@ file: [binary file]
 <pre><code class="language-json">{
   &quot;error&quot; : &quot;UnauthorizedOperationException&quot;,
   &quot;errorMessage&quot; : &quot;User not authenticated&quot;
+}
+</code></pre>
+<h1><a class="header" href="#change-user-password" id="change-user-password">Change user password</a></h1>
+<p>This endpoint allows an authenticated user on a Mojang account to change their password.</p>
+<h3><a class="header" href="#request-28" id="request-28">Request</a></h3>
+<ul>
+<li><strong>Method:</strong> <code>PUT</code></li>
+<li><strong>Endpoint:</strong> <code>/users/password</code></li>
+<li><strong>Full URL:</strong> <code>https://api.mojang.com/users/password</code></li>
+<li><strong>Headers:</strong>
+<ul>
+<li><code>Authorization: Bearer [JWT/auth token here]</code></li>
+<li><code>Content-Type: application/json</code></li>
+</ul>
+</li>
+</ul>
+<p>There are no URL parameters. Sample PUT body below:</p>
+<pre><code class="language-json">{
+  &quot;oldPassword&quot; : &quot;password12345&quot;, // current password
+  &quot;password&quot; : &quot;6ipo8Y%GMxM544V%$h*&amp;M*#%7!D*897%&quot; // new password
+}
+</code></pre>
+<h3><a class="header" href="#response-28" id="response-28">Response</a></h3>
+<p><strong>204: No Content</strong></p>
+<p>The password has been changed successfully. You must log in to your account again. There is no response for this status code.</p>
+<p><strong>400: Bad Request</strong></p>
+<p>This status code is returned if the old password provided is invalid, or if you have supplied an invalid JSON body.</p>
+<pre><code class="language-json">// when old password is invalid
+{
+  &quot;error&quot; : &quot;IllegalArgumentException&quot;,
+  &quot;errorMessage&quot; : &quot;Old password invalid.&quot;
+}
+
+// supplied invalid JSON body
+{
+  &quot;error&quot; : &quot;JsonParseException&quot;,
+  &quot;errorMessage&quot; : &quot;Unexpected character ('\&quot;' (code 34)): was expecting comma to separate Object entries\n at [Source: (org.eclipse.jetty.server.HttpInputOverHTTP); line: 1, column: 29]&quot;
+}
+</code></pre>
+<p><strong>401: Unauthorized</strong></p>
+<p>You have not provided a valid JWT / auth token, or you have neglected to provide the <code>Authorization</code> header at all.</p>
+<pre><code class="language-json">{
+  &quot;error&quot; : &quot;Unauthorized&quot;,
+  &quot;errorMessage&quot; : &quot;The request requires user authentication&quot;
 }
 </code></pre>
 
