[book] Fix Mary's credit and add danktrain's credit

--- a/book/index.html
+++ b/book/index.html
@@ -174,7 +174,8 @@
 <li>Dusks</li>
 <li>tanpug</li>
 <li>courtier</li>
-<li>Maryy</li>
+<li>Mary</li>
+<li>danktrain</li>
 </ul>
 <p>If I missed your credit, reach out. I want to give credit where credit is due.</p>
 <p>Thanks to Luke especially for forking over the cash to purchase new copies of Minecraft for testing purposes.</p>
