--- a/book/print.html
+++ b/book/print.html
@@ -176,7 +176,8 @@
 <li>Dusks</li>
 <li>tanpug</li>
 <li>courtier</li>
-<li>Maryy</li>
+<li>Mary</li>
+<li>danktrain</li>
 </ul>
 <p>If I missed your credit, reach out. I want to give credit where credit is due.</p>
 <p>Thanks to Luke especially for forking over the cash to purchase new copies of Minecraft for testing purposes.</p>
@@ -818,7 +819,7 @@ TAKEN
 <h3><a class="header" href="#response-9" id="response-9">Response</a></h3>
 <p><strong>204: No Content</strong></p>
 <p>No response for this status code. No security questions are needed, feel free to use any endpoints that require authorization without the need to answer security questions or authorize your location / IP address.</p>
-<p><strong>401: Unauthorized</strong></p>
+<p><strong>403: Forbidden</strong></p>
 <p>Security questions are needed. You must use the &quot;Get security questions&quot; endpoint, then submit the answers using the &quot;Send security answers&quot; endpoint in order to use endpoints that require an authorized location / IP address.</p>
 <pre><code class="language-json">{
    &quot;error&quot; : &quot;ForbiddenOperationException&quot;,
